<resources>
    <!--    home screen-->
    <string name="app_name">Meal Plan App</string>
    <string name="welcome_msg">Welcome!</string>
    <string name="grocery_btn">Grocery List</string>
    <string name="recipe_btn">Recipe List</string>

    <!--    grocery screen-->
    <string name="grocery_welcome_msg">Grocery List</string>
    <string name="addbtn">Add Item</string>
    <string name="deletebtn">Delete All Items</string>
    <string name="item1">Item 1</string>
    <string name="item2">Item 2</string>
    <string name="item3">Item 3</string>

    <!-- add grocery screen-->
    <string name="add_grocery_welcome_msg">Add Item</string>
    <string name="item">Type Item Here</string>
    <string name="finish">Save</string>

    <!-- add recipe screen-->
    <string name="add_recipe_welcome_msg">Add Recipe</string>
    <string name="ingredient">Type Ingredient Here</string>
    <string name="step">Type Step Here</string>
    <string name="save">Save</string>

    <!--    recipe screen-->
    <string name="recipe_welcome_msg">Saved Recipes</string>
    <string name="addrecipebtn">Add Recipe</string>

    <!-- shared preferences-->
    <string name="shared_pref_final">edu.psu.ist.hcdd340.final</string>
    <string name="add_an_item">Add An Item</string>
    <string name="this_item_will_be_added_to_your_grocery_list">This item will be added to your grocery list.</string>
    <string name="item_you_would_like_to_add">Item You Would Like to Add</string>
    <string name="todo">TODO</string>
    <string name="add_new_recipe">Add New Recipe</string>
    <string name="here_is_where_start_your_journey_of_creating_a_recipe">Here is where start your journey of creating a recipe.</string>
    <string name="meal_plan_app">Meal Plan App</string>
    <string name="never_go_without_a_plan">Never go without a plan</string>


</resources>