<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/addRecipeBack"
        android:layout_width="93dp"
        android:layout_height="73dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="104dp"
        android:contentDescription="@string/addbtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="?attr/homeAsUpIndicator"
        tools:ignore="DuplicateSpeakableTextCheck" />
    <Button
        android:id="@+id/saveButton"
        android:layout_width="142dp"
        android:layout_height="78dp"
        android:layout_marginStart="132dp"
        android:layout_marginTop="488dp"
        android:text="@string/finish"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/addRecipeWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="148dp"
        android:layout_marginTop="308dp"
        android:text="@string/add_recipe_welcome_msg"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/editTextRecipeItem"
        android:layout_width="201dp"
        android:layout_height="55dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="364dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/ingredient"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/editTextRecipeStep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="424dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="49dp"
        android:text="@string/step"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/purple_200"
        android:orientation="vertical"
        android:padding="5dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/add_new_recipe"
            android:textColor="@color/design_default_color_primary_dark"
            android:textSize="25sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/here_is_where_start_your_journey_of_creating_a_recipe"
            android:textColor="#311B92"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>