<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/addRecipeBack"
        android:layout_width="93dp"
        android:layout_height="73dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="104dp"
        android:contentDescription="@string/addbtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="?attr/homeAsUpIndicator"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/addRecipeWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="324dp"
        android:text="@string/item_you_would_like_to_add"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#9575CD"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="142dp"
        android:layout_height="78dp"
        android:layout_marginStart="132dp"
        android:layout_marginTop="488dp"
        android:text="@string/finish"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextRecipeItem"
        android:layout_width="239dp"
        android:layout_height="59dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="376dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:hint="@string/item"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/purple_200"
        android:orientation="vertical"
        android:padding="5dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/add_an_item"
            android:textColor="@color/design_default_color_primary_dark"
            android:textSize="25sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/this_item_will_be_added_to_your_grocery_list"
            android:textColor="#311B92"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>